--- a/protractor-mocha-webdriverjs/package.json
+++ b/protractor-mocha-webdriverjs/package.json
@@ -7,14 +7,20 @@
     "url": "https://github.com/archfirst/acceptance-testing-best-practices.git"
   },
   "devDependencies": {
-    "protractor": "~2.2.0",
-    "mocha": "~2.3.0",
     "chai": "~3.2.0",
     "chai-as-promised": "~5.1.0",
-    "expect.js": "~0.3.1",
     "chai-datetime": "~1.4.0",
     "chai-stats": "~0.3.0",
+    "expect.js": "~0.3.1",
+    "gulp": "^3.9.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-protractor": "^1.0.0",
+    "jshint-stylish": "^2.0.1",
     "knex": "~0.8.6",
-    "pg": "~4.4.1"
+    "mocha": "~2.3.0",
+    "node-gyp": "^3.0.3",
+    "pg": "~4.4.1",
+    "protractor": "~2.2.0",
+    "yargs": "^3.26.0"
   }
 }
